Documents/web projects/HS/infra/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hms-frontend
  namespace: hms
spec:
  selector:
    app: hms-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
