Documents/web projects/HS/infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hms-ingress
  namespace: hms
spec:
  rules:
    - host: hms.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hms-frontend
                port:
                  number: 80
